--- a/ubuntu-mate/main.yaml
+++ b/ubuntu-mate/main.yaml
@@ -34,3 +34,10 @@
         name: alias.graph
         scope: global
         value: 'log --graph --abbrev-commit --decorate --date=relative --date-order --format=format:"%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(yellow)- [%an]%C(reset)%C(auto)%d%C(reset)" --all'
+    - name: Add user user to virtualbox group
+      become: true
+      user:
+        name: "{{ ansible_env.USER }}"
+        groups:
+          - vboxsf
+        append: yes
