--- a/ubuntu-mate/main.yaml
+++ b/ubuntu-mate/main.yaml
@@ -15,6 +15,7 @@
         name:
           - emacs
           - fonts-powerline
+          - gitk
   roles:
     - role: gantsign.oh-my-zsh
       oh_my_zsh_theme: agnoster
@@ -34,7 +35,7 @@
         name: alias.graph
         scope: global
         value: 'log --graph --abbrev-commit --decorate --date=relative --date-order --format=format:"%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(yellow)- [%an]%C(reset)%C(auto)%d%C(reset)" --all'
-    - name: Add user user to virtualbox group
+    - name: Add user to virtualbox group
       become: true
       user:
         name: "{{ ansible_env.USER }}"
