--- a/ubuntu-mate/main.yaml
+++ b/ubuntu-mate/main.yaml
@@ -26,6 +26,19 @@
         - git
       users:
         - username: "{{ ansible_env.USER }}"
+    - role: gantsign.visual-studio-code
+      users:
+        - username: "{{ ansible_env.USER }}"
+          visual_studio_code_extensions: []
+          visual_studio_code_settings_overwrite: yes
+          visual_studio_code_settings:
+            {
+              "terminal.integrated.fontFamily": "Source Code Pro for Powerline",
+              "editor.formatOnSave": true,
+              "editor.renderWhitespace": "boundary",
+              "terminal.integrated.fontFamily": "Menlo for Powerline",
+              "terminal.integrated.shell.linux": "/usr/bin/zsh"
+            }
 
   post_tasks:
     - name: Switch to zsh
@@ -48,6 +61,8 @@
         name: user.email
         scope: global
         value: "{{ git_email }}"
+    - name: Fix fonts for VS Code
+      import_tasks: fix-vs-code-fonts.yaml
     - name: Add user to virtualbox group
       become: true
       user:
