--- a/ubuntu-mate/requirements.yaml
+++ b/ubuntu-mate/requirements.yaml
@@ -1,6 +1,7 @@
 ---
 roles:
   - src: gantsign.oh-my-zsh
+  - src: gantsign.visual-studio-code
 collections:
   - name: community.general
     source: https://galaxy.ansible.com
