--- a/ubuntu-mate/main.yaml
+++ b/ubuntu-mate/main.yaml
@@ -55,11 +55,13 @@
         name: user.name
         scope: global
         value: "{{ git_username }}"
+        when: git_username|length > 0
     - name: Add git email
       community.general.git_config:
         name: user.email
         scope: global
         value: "{{ git_email }}"
+        when: git_email|length > 0
     - name: Fix fonts for VS Code
       import_tasks: fix-vs-code-fonts.yaml
     - name: Install OCaml
