Fix package module

--- a/ubuntu-mate/main.yaml
+++ b/ubuntu-mate/main.yaml
@@ -18,6 +18,7 @@
         name:
           - emacs
           - fonts-powerline
+        state: present
   roles:
     - role: gantsign.oh-my-zsh
       oh_my_zsh_theme: agnoster
