--- a/ubuntu-mate/python.yaml
+++ b/ubuntu-mate/python.yaml
@@ -5,3 +5,30 @@
     name:
       - python3
       - python3-pip
+      - python3-venv
+    state: present
+
+- name: Create Python3-virtual environment folder
+  file:
+    name: "{{ virtualenv_folder }}"
+    state: directory
+
+- name: Check if virtualenv is already initialized
+  stat:
+    path: "{{ virtualenv_folder }}/bin/activate"
+  register: pip_virtualenv_initialized
+
+- name: Create virtual environment
+  shell: "python3 -m venv {{ virtualenv_folder }} --system-site-packages --copies"
+  when: pip_virtualenv_initialized.stat.exists == False
+
+- name: Upgrade virtual environment
+  shell: "python3 -m venv {{ virtualenv_folder }} --system-site-packages --copies --upgrade"
+  when: pip_virtualenv_initialized.stat.exists == True
+
+- name: Install python packages
+  pip:
+    name:
+      - flake8
+      - autopep8
+    virtualenv: "{{ virtualenv_folder }}"
