--- a/ubuntu-mate/main.yaml
+++ b/ubuntu-mate/main.yaml
@@ -36,6 +36,7 @@
         - username: "{{ ansible_env.USER }}"
           visual_studio_code_extensions:
             - ms-python.python
+            - ms-dotnettools.csharp
           visual_studio_code_settings_overwrite: yes
           visual_studio_code_settings:
             {
